[package]
name = "module-lwe"
version = "0.1.0"
edition = "2021"
description = "Implements the module learning-with-errors public key encrpytion scheme."
license = "MIT"
documentation = "https://docs.rs/module-lwe"
homepage = "https://github.com/lattice-based-cryptography/module-lwe"
repository = "https://github.com/lattice-based-cryptography/module-lwe"

[dependencies]
polynomial-ring = "0.5.0"
num-traits = "=0.2.19"
rand = "0.8.5"
rand_distr = "0.4.3"
