[package]
name = "module-lwe"
version = "0.1.3"
edition = "2021"
description = "Implements the module learning-with-errors public key encrpytion scheme."
license = "MIT"
documentation = "https://docs.rs/module-lwe"
homepage = "https://github.com/lattice-based-cryptography/module-lwe"
repository = "https://github.com/lattice-based-cryptography/module-lwe"

[dependencies]
polynomial-ring = "0.5.0"
num-traits = "=0.2.19"
rand = "0.8.5"
rand_distr = "0.4.3"
ntt = "0.1.9"
ring-lwe = "0.1.6"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark_keygen"
path = "benches/benchmark_keygen.rs"
harness = false

[[bench]]
name = "benchmark_encrypt"
path = "benches/benchmark_encrypt.rs"
harness = false

[[bench]]
name = "benchmark_decrypt"
path = "benches/benchmark_decrypt.rs"
harness = false